// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-kjMGqw igMeBZ"
  >
    Xsmall
  </span>
  <span
    className="sc-kjMGqw fOAAFv"
    color="piccolo.100"
  >
    Xsmall
  </span>
  <span
    className="sc-kjMGqw xPVvK"
    color="goten.100"
  >
    Xsmall
  </span>
</div>
`;

exports[`Label renders with different LetterCases 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-kjMGqw igMeBZ"
  >
    Default
  </span>
  <span
    className="sc-kjMGqw jijOud"
  >
    Lowercase
  </span>
</div>
`;

exports[`Label renders with different Sizes 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <span
    className="sc-kjMGqw inSAPB"
    size="twoxsmall"
  >
    Twoxsmall
  </span>
  <span
    className="sc-kjMGqw igMeBZ"
  >
    Xsmall
  </span>
</div>
`;

exports[`Label renders with different SizesList 1`] = `
<div
  className="flex flex-col justify-around items-center w-full"
>
  <div
    className="flex justify-around items-center w-full mb-4"
  >
    <span
      className="sc-kjMGqw inSAPB"
      size="twoxsmall"
    >
      Twoxsmall
    </span>
    <span
      className="sc-kjMGqw fDZnqp"
      size="twoxsmall"
    >
      <span
        className="sc-dhyxXW fPCvhH"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem kFrdPd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-kjMGqw cxEmYx"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-gZVZiL hyOPqu"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz dkSHDR"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-kjMGqw hBsZPR"
      size="twoxsmall"
    >
      <span
        className="sc-dhyxXW fPCvhH"
        size="twoxsmall"
      >
        <svg
          className="sc-iqGgem kFrdPd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-gZVZiL hyOPqu"
        size="twoxsmall"
      >
        <svg
          className="sc-jgbSNz dkSHDR"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    className="flex justify-around items-center w-full"
  >
    <span
      className="sc-kjMGqw igMeBZ"
    >
      Xsmall
    </span>
    <span
      className="sc-kjMGqw cKdqDB"
    >
      <span
        className="sc-dhyxXW kqNgeG"
      >
        <svg
          className="sc-iqGgem kFrdPd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-kjMGqw iNeCmp"
    >
      Xsmall
      <span
        className="sc-gZVZiL fqCDPf"
      >
        <svg
          className="sc-jgbSNz dkSHDR"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-kjMGqw Xhkkh"
    >
      <span
        className="sc-dhyxXW kqNgeG"
      >
        <svg
          className="sc-iqGgem kFrdPd"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-gZVZiL fqCDPf"
      >
        <svg
          className="sc-jgbSNz dkSHDR"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>
</div>
`;
